# live-bootcamp-project

./: compose.yml
app-service/: Cargo.toml
auth-service/: Cargo.toml
auth-service/src/: lib.rs  main.rs
auth-service/src/routes/: login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
